--- a/index.html
+++ b/index.html
@@ -81,11 +81,8 @@
     </section>
     <section>
         <div class="featured-product__container">
-            <div class="featured-product__title">
-                <h2>featured product</h2>
-            </div>
-            <div class="container">
-                <div class="columns">
+                <h2 class="featured-product__title">featured product</h2>
+            <div class="container columns">
                     <article class="product">
                         <div class="product__item">
                             <img src="assets/images/1.jpg">
@@ -165,11 +162,10 @@
             </div>
     </section>
     <footer>
-
         <div class="footer-container">
             <div class="footer-row">
                 <div class="footer-column">
-                    <div class="list">
+                    <div class="list footer-column">
                         <ul>
                             <h4 class="list__title">about us</h4>
                             <li><a href="#" class="list__item">Who we are</a></li>
